Add package deployment